--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
         <nav>
             <h1><a href="/">Julia Kloiber</a></h1>
             <ul>
+                <li><a href="/talks">Talks</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="https://twitter.com/j_kloiber">Twitter</a></li>
             </ul>
