--- a/_includes/base.css
+++ b/_includes/base.css
@@ -151,6 +151,72 @@
        url("https://rsms.me/inter/font-files/Inter-BlackItalic.woff?v=3.5") format("woff");
 }
 
+/* -------------------------------------------------------
+Variable font.
+Usage:
+
+  html { font-family: 'Inter', sans-serif; }
+  @supports (font-variation-settings: normal) {
+    html { font-family: 'Inter var', sans-serif; }
+  }
+*/
+@font-face {
+  font-family: 'Inter var';
+  font-weight: 100 900;
+  font-style: normal;
+  font-named-instance: 'Regular';
+  font-display: fallback;
+  src: url("https://rsms.me/inter/font-files/Inter-upright.var.woff2?v=3.5") format("woff2");
+}
+@font-face {
+  font-family: 'Inter var';
+  font-weight: 100 900;
+  font-style: italic;
+  font-named-instance: 'Italic';
+  font-display: fallback;
+  src: url("https://rsms.me/inter/font-files/Inter-italic.var.woff2?v=3.5") format("woff2");
+}
+
+/* Legacy naming compatibility */
+@font-face {
+  font-family: 'Inter var alt';
+  font-weight: 100 900;
+  font-style: normal;
+  font-named-instance: 'Regular';
+  font-display: fallback;
+  src: url("https://rsms.me/inter/font-files/Inter-upright.var.woff2?v=3.5") format("woff2");
+}
+@font-face {
+  font-family: 'Inter var alt';
+  font-weight: 100 900;
+  font-style: italic;
+  font-named-instance: 'Italic';
+  font-display: fallback;
+  src: url("https://rsms.me/inter/font-files/Inter-italic.var.woff2?v=3.5") format("woff2");
+}
+
+
+/* --------------------------------------------------------------------------
+[EXPERIMENTAL] Multi-axis, single variable font.
+
+Slant axis is not yet widely supported (as of February 2019) and thus this
+multi-axis single variable font is opt-in rather than the default.
+
+When using this, you will probably need to set font-variation-settings
+explicitly, e.g.
+
+  * { font-variation-settings: "slnt" 0deg }
+  .italic { font-variation-settings: "slnt" 10deg }
+
+*/
+@font-face {
+  font-family: 'Inter var experimental';
+  font-weight: 100 900;
+  font-style: oblique 0deg 10deg;
+  font-display: fallback;
+  src: url("https://rsms.me/inter/font-files/Inter.var.woff2?v=3.5") format("woff2");
+}
+
 @viewport {
   width: width;
 }
@@ -190,7 +256,7 @@ html {
     font-size: var(--font-size);
     line-height: var(--line-height);
 
-    font-family: 'Inter var', -system-ui, system-ui, sans-serif;
+    font-family: 'Inter', -system-ui, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: none;
@@ -200,6 +266,12 @@ html {
     -o-font-feature-settings:      'dlig' 1;
     -webkit-font-feature-settings: 'dlig' 1;
     font-feature-settings:         'dlig' 1;
+}
+
+@supports (font-variation-settings: normal) {
+    html {
+        font-family: 'Inter var', -system-ui, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, sans-serif;
+    }
 }
 
 p, ul, img {
