--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -3,8 +3,88 @@ layout: default
 ---
 
 <section>
-    <article>
-        {{ content }}
+    <article itemscope itemtype="https://schema.org/Person">
+        <meta itemprop="url" content="https://juliakloiber.com" />
+        <h1 id="about">About</h1>
+
+        <p><img itemprop="image" class="picture right" src="/img/about/julia.jpg"></p>
+
+        <p>
+            <span itemprop="name"><span itemprop="givenName">Julia</span> <span
+                    itemprop="familyName">Kloiber</span></span> is the <span itemprop="jobTitle">Founder of <a
+                    itemprop="worksFor" itemscope itemtype="https://schema.org/Organization"
+                    href="http://superrr.net/lab/">
+                    <meta itemprop="url" content="http://superrr.net/lab/" />
+                    <meta itemprop="founder" content="Julia Kloiber" />
+                    <meta itemprop="founder" content="Elisa Lindinger" />
+                    <meta itemprop="foundingDate" content="2019" />
+                    <span itemprop="name">Superrr Lab</span></a></span> – a research and
+            advocacy
+            organization and a <span itemprop="jobTitle">partner</span> at <a itemprop="worksFor" itemscope
+                itemtype="https://schema.org/Organization" href="https://www.ashoka.org/en">
+                <meta itemprop="url" content="https://www.ashoka.org/en" />
+                <span itemprop="name">Ashoka Germany</span></a>. She&nbsp;develops
+            strategies and concepts for the digital world.
+        </p>
+
+        <p>
+            Julia has put her expertise&nbsp;in technology, design and media studies to use for the <a
+                itemprop="alumniOf" itemscope itemtype="https://schema.org/Organization"
+                href="https://www.mozilla.org/en-US/foundation/">
+                <meta itemprop="url" content="https://www.mozilla.org/en-US/foundation/" />
+                <span itemprop="name">Mozilla Foundation</span></a>,
+            the <a itemprop="alumniOf" itemscope itemtype="https://schema.org/Organization" href="https://okfn.de/">
+
+                <span itemprop="name">Open Knowledge Foundation</span></a> and <a itemprop="alumniOf" itemscope
+                itemtype="https://schema.org/Organization" href="https://www.theengineroom.org/">
+                <meta itemprop="url" content="https://www.theengineroom.org/">
+                <span itemprop="name">The Engine Room</span></a>. She has been running multiple projects that foster the
+            reuse of open data and promote
+            transparency – such as Germany’s first Civic Tech Incubator ‘<a href="http://stadtlandcode.de/">Stadt Land
+                Code</a>’.&nbsp;She enjoys speaking at international conferences, such as TED, the Personal Democracy
+            Forum or the World Design Conference. As digital strategy advisor she is working with government
+            institutions and&nbsp;businesses&nbsp;alike.
+        </p>
+
+        <p itemprop="alumniOf" itemscope itemtype="https://schema.org/Organization">
+            <meta itemprop="founder" content="Julia Kloiber" />
+            In <span itemprop="foundingDate">2014</span> she co-founded <span itemprop="name">Code for Germany</span>
+            and grew it into <span itemprop="description">
+                a network of over 1000+ civic tech volunteers in 25 cities all over Germany
+            </span>. She also helped grow <a href="https://codeforall.org">Code for All</a>, the global
+            network of Code-­for organizations with partners on six continents.
+        </p>
+
+        <p itemprop="alumniOf" itemscope itemtype="https://schema.org/Organization">
+            <meta itemprop="founder" content="Julia Kloiber" />
+            <meta itemprop="founder" content="Cosmin Cabulea" />
+            In <span itemprop="foundingDate">2016</span> Julia co-founded <span itemprop="description">Germanys first
+                public fund for open source software
+                projects</span>: The <a itemprop="url" href="https://prototypefund.de"><span itemprop="name">Prototype
+                    Fund</span></a>. In its first round the
+            program attracted more
+            500 applicants all over Germany. Over the course of 4 years the Fund will support open source projects with
+            8 million Euros.
+        </p>
+
+        <p>
+            She is on the advisory board of the <a itemprop="affiliation" itemscope
+                itemtype="https://schema.org/Organization" href="https://www.postcode-lotterie.de">
+                <meta itemprop="url" content="https://www.postcode-lotterie.de" />
+                <span itemprop="name">German Postcode Lotterie</span></a>, a member of the <a
+                href="https://www.global-diplomacy-lab.org">Global Diplomacy Lab</a> and the <a
+                href="https://okfn.de/">Open Knowledge Foundation</a>&nbsp;as well as a alumni
+            of the <a href="https://www.giz.de/expertise/html/8444.html">Global Leadership Academy</a>. Since April 2018
+            Julia is a Fellow at the <a href="https://www.mozilla.org/en-US/foundation/">Mozilla Foundation</a>.
+        </p>
+
+        <p>
+            Before joining the ’Open Movement’, Julia used to work in political campaigning and marketing for <a
+                href="http://www.platoon.org">Platoon. Cultural. Development.</a> in Berlin and <a
+                href="http://wmm.com">Women Make Movies</a> in New York.
+        </p>
+
+        <p>Email: <a itemprop="email" href="mailto:mail@juliakloiber.com">mail@juliakloiber.com</a></p>
 
         <h3>Projects:</h3>
         <ul>
