changes in the Bio

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -11,7 +11,7 @@ layout: default
 
         <p>
             <span itemprop="name"><span itemprop="givenName">Julia</span> <span
-                    itemprop="familyName">Kloiber</span></span> is the <span itemprop="jobTitle">Founder of <a
+                    itemprop="familyName">Kloiber</span></span> is the <span itemprop="jobTitle">Co-Founder of <a
                     itemprop="worksFor" itemscope itemtype="https://schema.org/Organization"
                     href="http://superrr.net/lab/">
                     <meta itemprop="url" content="http://superrr.net/lab/" />
@@ -20,11 +20,7 @@ layout: default
                     <meta itemprop="foundingDate" content="2019" />
                     <span itemprop="name">Superrr Lab</span></a></span> – a research and
             advocacy
-            organization and a <span itemprop="jobTitle">partner</span> at <a itemprop="worksFor" itemscope
-                itemtype="https://schema.org/Organization" href="https://www.ashoka.org/en">
-                <meta itemprop="url" content="https://www.ashoka.org/en" />
-                <span itemprop="name">Ashoka Germany</span></a>. She&nbsp;develops
-            strategies and concepts for the digital world.
+            organization. She&nbsp;develops strategies and concepts for the digital world.
         </p>
 
         <p>
@@ -68,7 +64,7 @@ layout: default
         </p>
 
         <p>
-            She is on the advisory board of the <a itemprop="affiliation" itemscope
+            She is on the advisory board of <a href="https://digitalservice4germany.com/">Digital Service 4 Germany</a>, the <a itemprop="affiliation" itemscope
                 itemtype="https://schema.org/Organization" href="https://www.postcode-lotterie.de">
                 <meta itemprop="url" content="https://www.postcode-lotterie.de" />
                 <span itemprop="name">German Postcode Lotterie</span></a>, a member of the <a
