--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -67,9 +67,9 @@ layout: default
             She is on the advisory board of <a href="https://digitalservice4germany.com/">Digital Service 4 Germany</a>, the <a itemprop="affiliation" itemscope
                 itemtype="https://schema.org/Organization" href="https://www.postcode-lotterie.de">
                 <meta itemprop="url" content="https://www.postcode-lotterie.de" />
-                <span itemprop="name">German Postcode Lotterie</span></a>, a member of the Fachbeirat at <a href="https://www.deutsche-stiftung-engagement-und-ehrenamt.de/">DSEE (Deutsche Stiftung für Engagement und Ehrenamt)</a> the and the <a
+                <span itemprop="name">German Postcode Lotterie</span></a>, a member of the Fachbeirat at <a href="https://www.deutsche-stiftung-engagement-und-ehrenamt.de/">DSEE (Deutsche Stiftung für Engagement und Ehrenamt)</a>, a member of the <a
                 href="https://www.global-diplomacy-lab.org">Global Diplomacy Lab</a> as well as the <a
-                href="https://okfn.de/">Open Knowledge Foundation</a>&nbsp;as well as a alumni
+                href="https://okfn.de/">Open Knowledge Foundation</a>. She is an alumni
             of the <a href="https://www.giz.de/expertise/html/8444.html">Global Leadership Academy</a>. From 2018 – 2019
             she was a Fellow at the <a href="https://www.mozilla.org/en-US/foundation/">Mozilla Foundation</a>.
         </p>
