--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -11,7 +11,7 @@ layout: default
 
         <p>
             <span itemprop="name"><span itemprop="givenName">Julia</span> <span
-                    itemprop="familyName">Kloiber</span></span> is the <span itemprop="jobTitle">Co-Founder of <a
+                    itemprop="familyName">Kloiber</span></span> is the <span itemprop="jobTitle">Co-Founder of the fenminist organization <a
                     itemprop="worksFor" itemscope itemtype="https://schema.org/Organization"
                     href="http://superrr.net/lab/">
                     <meta itemprop="url" content="http://superrr.net/lab/" />
@@ -20,7 +20,7 @@ layout: default
                     <meta itemprop="foundingDate" content="2019" />
                     <span itemprop="name">Superrr Lab</span></a></span> – a research and
             advocacy
-            organization. She&nbsp;develops strategies and concepts for the digital world.
+            organization. She&nbsp;develops strategies and concepts for the digital world, focusing on societal benefits and equity.
         </p>
 
         <p>
@@ -38,8 +38,8 @@ layout: default
             reuse of open data and promote
             transparency – such as Germany’s first Civic Tech Incubator ‘<a href="http://stadtlandcode.de/">Stadt Land
                 Code</a>’.&nbsp;She enjoys speaking at international conferences, such as TED, the Personal Democracy
-            Forum or the World Design Conference. As digital strategy advisor she is working with government
-            institutions and&nbsp;businesses&nbsp;alike.
+            Forum or the World Design Conference. As digital strategy advisor, she works with government
+            institutions and&nbsp; non-profits.
         </p>
 
         <p itemprop="alumniOf" itemscope itemtype="https://schema.org/Organization">
@@ -54,22 +54,19 @@ layout: default
         <p itemprop="alumniOf" itemscope itemtype="https://schema.org/Organization">
             <meta itemprop="founder" content="Julia Kloiber" />
             <meta itemprop="founder" content="Cosmin Cabulea" />
-            In <span itemprop="foundingDate">2016</span> Julia co-founded <span itemprop="description">Germanys first
-                public fund for open source software
+            In <span itemprop="foundingDate">2016</span> Julia co-founded <span itemprop="description">Germany's first
+                public fund for open-source software
                 projects</span>: The <a itemprop="url" href="https://prototypefund.de"><span itemprop="name">Prototype
-                    Fund</span></a>. In its first round the
-            program attracted more
-            500 applicants all over Germany. Over the course of 4 years the Fund will support open source projects with
-            8 million Euros.
+                    Fund</span></a>. In its first round, the program attracted over 500 applicants from all over Germany. Over four eight, the fund will support open-source projects with 14+ million Euros.
         </p>
 
         <p>
-            She is on the advisory board of <a href="https://digitalservice4germany.com/">Digital Service 4 Germany</a>, the <a itemprop="affiliation" itemscope
+            She is on the advisory board for the <a href="https://digitalstrategie-deutschland.de/beirat/">Federal German Digital Strategy</a>, <a href="https://digitalservice4germany.com/">Digital Service 4 Germany</a>, the <a itemprop="affiliation" itemscope
                 itemtype="https://schema.org/Organization" href="https://www.postcode-lotterie.de">
                 <meta itemprop="url" content="https://www.postcode-lotterie.de" />
                 <span itemprop="name">German Postcode Lotterie</span></a>, a member of the Fachbeirat at <a href="https://www.deutsche-stiftung-engagement-und-ehrenamt.de/">DSEE (Deutsche Stiftung für Engagement und Ehrenamt)</a>, a member of the <a
                 href="https://www.global-diplomacy-lab.org">Global Diplomacy Lab</a> as well as the <a
-                href="https://okfn.de/">Open Knowledge Foundation</a>. She is an alumni
+                href="https://okfn.de/">Open Knowledge Foundation</a>. She is an alumnus
             of the <a href="https://www.giz.de/expertise/html/8444.html">Global Leadership Academy</a>. From 2018 – 2019
             she was a Fellow at the <a href="https://www.mozilla.org/en-US/foundation/">Mozilla Foundation</a>.
         </p>
