--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -11,7 +11,7 @@ layout: default
 
         <p>
             <span itemprop="name"><span itemprop="givenName">Julia</span> <span
-                    itemprop="familyName">Kloiber</span></span> is the <span itemprop="jobTitle">Co-Founder of the fenminist organization <a
+                    itemprop="familyName">Kloiber</span></span> is the <span itemprop="jobTitle">Co-Founder of the feminist organization <a
                     itemprop="worksFor" itemscope itemtype="https://schema.org/Organization"
                     href="http://superrr.net/lab/">
                     <meta itemprop="url" content="http://superrr.net/lab/" />
