--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -60,16 +60,24 @@ layout: default
                     Fund</span></a>. In its first round, the program attracted over 500 applicants from all over Germany. Over four eight, the fund will support open-source projects with 14+ million Euros.
         </p>
 
-        <p>
-            She is on the advisory board for the <a href="https://digitalstrategie-deutschland.de/beirat/">Federal German Digital Strategy</a>, <a href="https://digitalservice4germany.com/">Digital Service 4 Germany</a>, the <a itemprop="affiliation" itemscope
-                itemtype="https://schema.org/Organization" href="https://www.postcode-lotterie.de">
-                <meta itemprop="url" content="https://www.postcode-lotterie.de" />
-                <span itemprop="name">German Postcode Lotterie</span></a>, a member of the Fachbeirat at <a href="https://www.deutsche-stiftung-engagement-und-ehrenamt.de/">DSEE (Deutsche Stiftung für Engagement und Ehrenamt)</a>, a member of the <a
-                href="https://www.global-diplomacy-lab.org">Global Diplomacy Lab</a> as well as the <a
-                href="https://okfn.de/">Open Knowledge Foundation</a>. She is an alumnus
-            of the <a href="https://www.giz.de/expertise/html/8444.html">Global Leadership Academy</a>. From 2018 – 2019
-            she was a Fellow at the <a href="https://www.mozilla.org/en-US/foundation/">Mozilla Foundation</a>.
-        </p>
+       <p>
+    She is on the advisory board of the
+    <a itemprop="affiliation" itemscope itemtype="https://schema.org/Organization" href="https://www.postcode-lotterie.de">
+        <meta itemprop="url" content="https://www.postcode-lotterie.de" />
+        <span itemprop="name">German Postcode Lotterie</span>
+    </a>, a member of the Fachbeirat at
+    <a href="https://www.deutsche-stiftung-engagement-und-ehrenamt.de/">DSEE (Deutsche Stiftung für Engagement und Ehrenamt)</a>,
+    a member of the
+    <a href="https://www.global-diplomacy-lab.org">Global Diplomacy Lab</a> as well as the
+    <a href="https://okfn.de/">Open Knowledge Foundation</a>.
+    She served on the board of the
+    <a href="https://digitalstrategie-deutschland.de/">Federal German Digital Strategy</a> from 2022 to 2024 and on the board of the
+    <a href="https://digitalservice4germany.com/">German Digital Service</a> from 2020 to 2025.
+    She is an alumnus of the
+    <a href="https://www.giz.de/expertise/html/8444.html">Global Leadership Academy</a>.
+    From 2018–2019 she was a Fellow at the
+    <a href="https://www.mozilla.org/en-US/foundation/">Mozilla Foundation</a>.
+</p>
 
         <p>
             Before joining the ’Open Movement’, Julia used to work in political campaigning and marketing for <a
