--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -66,13 +66,12 @@ layout: default
         <meta itemprop="url" content="https://www.postcode-lotterie.de" />
         <span itemprop="name">German Postcode Lotterie</span>
     </a>, a member of the Fachbeirat at
-    <a href="https://www.deutsche-stiftung-engagement-und-ehrenamt.de/">DSEE (Deutsche Stiftung für Engagement und Ehrenamt)</a>,
-    a member of the
-    <a href="https://www.global-diplomacy-lab.org">Global Diplomacy Lab</a> as well as the
+    <a href="https://www.deutsche-stiftung-engagement-und-ehrenamt.de/">DSEE (Deutsche Stiftung für Engagement und Ehrenamt)</a>
+    and a member of the
     <a href="https://okfn.de/">Open Knowledge Foundation</a>.
     She served on the board of the
-    <a href="https://digitalstrategie-deutschland.de/">Federal German Digital Strategy</a> from 2022 to 2024 and on the board of the
-    <a href="https://digitalservice4germany.com/">German Digital Service</a> from 2020 to 2025.
+    <a href="https://digitalstrategie-deutschland.de/">Federal German Digital Strategy</a> (2022–2024) and on the board of the
+    <a href="https://digitalservice4germany.com/">German Digital Service</a> (2020–2025).
     She is an alumnus of the
     <a href="https://www.giz.de/expertise/html/8444.html">Global Leadership Academy</a>.
     From 2018–2019 she was a Fellow at the
