--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -64,8 +64,7 @@ layout: default
     She is on the advisory board of the
     <a itemprop="affiliation" itemscope itemtype="https://schema.org/Organization" href="https://www.postcode-lotterie.de">
         <meta itemprop="url" content="https://www.postcode-lotterie.de" />
-        <span itemprop="name">German Postcode Lotterie</span>
-    </a>, a member of the Fachbeirat at
+        <span itemprop="name">German Postcode Lotterie</span></a>, a member of the Fachbeirat at
     <a href="https://www.deutsche-stiftung-engagement-und-ehrenamt.de/">DSEE (Deutsche Stiftung für Engagement und Ehrenamt)</a>
     and a member of the
     <a href="https://okfn.de/">Open Knowledge Foundation</a>.
