--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -60,20 +60,21 @@ layout: default
                     Fund</span></a>. In its first round, the program attracted over 500 applicants from all over Germany. Over four eight, the fund will support open-source projects with 14+ million Euros.
         </p>
 
-       <p>
-    She is on the advisory board of the
+<p>
+    She serves on the advisory board of the
     <a itemprop="affiliation" itemscope itemtype="https://schema.org/Organization" href="https://www.postcode-lotterie.de">
         <meta itemprop="url" content="https://www.postcode-lotterie.de" />
-        <span itemprop="name">German Postcode Lotterie</span></a>, a member of the Fachbeirat at
-    <a href="https://www.deutsche-stiftung-engagement-und-ehrenamt.de/">DSEE (Deutsche Stiftung für Engagement und Ehrenamt)</a>
-    and a member of the
+        <span itemprop="name">German Postcode Lotterie</span></a>, is a member of the Fachbeirat at
+    <a href="https://www.deutsche-stiftung-engagement-und-ehrenamt.de/">DSEE (Deutsche Stiftung für Engagement und Ehrenamt)</a>,
+    and is affiliated with the
     <a href="https://okfn.de/">Open Knowledge Foundation</a>.
-    She served on the board of the
-    <a href="https://digitalstrategie-deutschland.de/">Federal German Digital Strategy</a> (2022–2024) and on the board of the
+    She previously served on the board of the
+    <a href="https://digitalstrategie-deutschland.de/">Federal German Digital Strategy</a> (2022–2024)
+    and on the board of the
     <a href="https://digitalservice4germany.com/">German Digital Service</a> (2020–2025).
-    She is an alumnus of the
+    She is an alumna of the
     <a href="https://www.giz.de/expertise/html/8444.html">Global Leadership Academy</a>.
-    From 2018–2019 she was a Fellow at the
+    From 2018–2019, she was a Fellow at the
     <a href="https://www.mozilla.org/en-US/foundation/">Mozilla Foundation</a>.
 </p>
 
