--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -18,70 +18,71 @@ layout: default
                     <meta itemprop="founder" content="Julia Kloiber" />
                     <meta itemprop="founder" content="Elisa Lindinger" />
                     <meta itemprop="foundingDate" content="2019" />
-                    <span itemprop="name">Superrr Lab</span></a></span> – a research and
-            advocacy
-            organization. She&nbsp;develops strategies and concepts for the digital world, focusing on societal benefits and equity.
+                    <span itemprop="name">Superrr Lab</span></a></span>, a research and advocacy organization.
+            Her work focuses on shaping digital strategies and concepts that put societal benefit and fairness at the center.
         </p>
 
         <p>
-            Julia has put her expertise&nbsp;in technology, design and media studies to use for the <a
-                itemprop="alumniOf" itemscope itemtype="https://schema.org/Organization"
-                href="https://www.mozilla.org/en-US/foundation/">
+            With a background in technology, design, and media studies, Julia has worked with international organizations such as the
+            <a itemprop="alumniOf" itemscope itemtype="https://schema.org/Organization"
+               href="https://www.mozilla.org/en-US/foundation/">
                 <meta itemprop="url" content="https://www.mozilla.org/en-US/foundation/" />
                 <span itemprop="name">Mozilla Foundation</span></a>,
             the <a itemprop="alumniOf" itemscope itemtype="https://schema.org/Organization" href="https://okfn.de/">
-
-                <span itemprop="name">Open Knowledge Foundation</span></a> and <a itemprop="alumniOf" itemscope
-                itemtype="https://schema.org/Organization" href="https://www.theengineroom.org/">
+                <span itemprop="name">Open Knowledge Foundation</span></a>,
+            and <a itemprop="alumniOf" itemscope itemtype="https://schema.org/Organization"
+                href="https://www.theengineroom.org/">
                 <meta itemprop="url" content="https://www.theengineroom.org/">
-                <span itemprop="name">The Engine Room</span></a>. She has been running multiple projects that foster the
-            reuse of open data and promote
-            transparency – such as Germany’s first Civic Tech Incubator ‘<a href="http://stadtlandcode.de/">Stadt Land
-                Code</a>’.&nbsp;She enjoys speaking at international conferences, such as TED, the Personal Democracy
-            Forum or the World Design Conference. As digital strategy advisor, she works with government
-            institutions and&nbsp; non-profits.
+                <span itemprop="name">The Engine Room</span></a>.
+            She has led and supported numerous projects that promote transparency and the reuse of open data, including
+            Germany’s first civic tech incubator, ‘<a href="http://stadtlandcode.de/">Stadt Land Code</a>’.
+            Julia regularly speaks at international conferences such as TED, the Personal Democracy Forum, and the World Design Conference,
+            and advises governments and nonprofits on digital strategy and transformation.
         </p>
 
         <p itemprop="alumniOf" itemscope itemtype="https://schema.org/Organization">
             <meta itemprop="founder" content="Julia Kloiber" />
             In <span itemprop="foundingDate">2014</span> she co-founded <span itemprop="name">Code for Germany</span>
-            and grew it into <span itemprop="description">
-                a network of over 1000+ civic tech volunteers in 25 cities all over Germany
-            </span>. She also helped grow <a href="https://codeforall.org">Code for All</a>, the global
-            network of Code-­for organizations with partners on six continents.
+            and helped grow it into <span itemprop="description">
+                a nationwide network of more than 1,000 civic tech volunteers across 25 cities in Germany
+            </span>.
+            She also played a key role in building <a href="https://codeforall.org">Code for All</a>, the global
+            network of Code-for organizations with partners on six continents.
         </p>
 
         <p itemprop="alumniOf" itemscope itemtype="https://schema.org/Organization">
             <meta itemprop="founder" content="Julia Kloiber" />
             <meta itemprop="founder" content="Cosmin Cabulea" />
             In <span itemprop="foundingDate">2016</span> Julia co-founded <span itemprop="description">Germany's first
-                public fund for open-source software
-                projects</span>: The <a itemprop="url" href="https://prototypefund.de"><span itemprop="name">Prototype
-                    Fund</span></a>. In its first round, the program attracted over 500 applicants from all over Germany. Over four eight, the fund will support open-source projects with 14+ million Euros.
+                public funding program dedicated to open-source software projects</span>:
+            the <a itemprop="url" href="https://prototypefund.de"><span itemprop="name">Prototype Fund</span></a>.
+            Since its launch, the fund has received hundreds of applications and supports open-source initiatives
+            across Germany with more than €14 million in funding.
         </p>
 
-<p>
-    She serves on the advisory board of the
-    <a itemprop="affiliation" itemscope itemtype="https://schema.org/Organization" href="https://www.postcode-lotterie.de">
-        <meta itemprop="url" content="https://www.postcode-lotterie.de" />
-        <span itemprop="name">German Postcode Lotterie</span></a>, is a member of the Fachbeirat at
-    <a href="https://www.deutsche-stiftung-engagement-und-ehrenamt.de/">DSEE (Deutsche Stiftung für Engagement und Ehrenamt)</a>,
-    and is affiliated with the
-    <a href="https://okfn.de/">Open Knowledge Foundation</a>.
-    She previously served on the board of the
-    <a href="https://digitalstrategie-deutschland.de/">Federal German Digital Strategy</a> (2022–2024)
-    and on the board of the
-    <a href="https://digitalservice4germany.com/">German Digital Service</a> (2020–2025).
-    She is an alumna of the
-    <a href="https://www.giz.de/expertise/html/8444.html">Global Leadership Academy</a>.
-    From 2018–2019, she was a Fellow at the
-    <a href="https://www.mozilla.org/en-US/foundation/">Mozilla Foundation</a>.
-</p>
+        <p>
+            She serves on the advisory board of the
+            <a itemprop="affiliation" itemscope itemtype="https://schema.org/Organization"
+               href="https://www.postcode-lotterie.de">
+                <meta itemprop="url" content="https://www.postcode-lotterie.de" />
+                <span itemprop="name">German Postcode Lotterie</span></a>, is a member of the Fachbeirat at
+            <a href="https://www.deutsche-stiftung-engagement-und-ehrenamt.de/">DSEE (Deutsche Stiftung für Engagement und Ehrenamt)</a>,
+            and is affiliated with the
+            <a href="https://okfn.de/">Open Knowledge Foundation</a>.
+            She previously served on the board of the
+            <a href="https://digitalstrategie-deutschland.de/">Federal German Digital Strategy</a> (2022–2024)
+            and on the board of the
+            <a href="https://digitalservice4germany.com/">German Digital Service</a> (2020–2025).
+            She is an alumna of the
+            <a href="https://www.giz.de/expertise/html/8444.html">Global Leadership Academy</a>.
+            From 2018–2019, she was a Fellow at the
+            <a href="https://www.mozilla.org/en-US/foundation/">Mozilla Foundation</a>.
+        </p>
 
         <p>
-            Before joining the ’Open Movement’, Julia used to work in political campaigning and marketing for <a
-                href="http://www.platoon.org">Platoon. Cultural. Development.</a> in Berlin and <a
-                href="http://wmm.com">Women Make Movies</a> in New York.
+            Before joining the open movement, Julia worked in political campaigning and marketing for
+            <a href="http://www.platoon.org">Platoon. Cultural. Development.</a> in Berlin and
+            <a href="http://wmm.com">Women Make Movies</a> in New York.
         </p>
 
         <p>Email: <a itemprop="email" href="mailto:mail@juliakloiber.com">mail@juliakloiber.com</a></p>
