--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -35,7 +35,7 @@ layout: default
                 <meta itemprop="url" content="https://www.theengineroom.org/">
                 <span itemprop="name">The Engine Room</span></a>.
             She has led and supported numerous projects that promote transparency and the reuse of open data, including
-            Germany’s first civic tech incubator, ‘<a href="http://stadtlandcode.de/">Stadt Land Code</a>’.
+            Germany’s first civic tech incubator, <a href="http://stadtlandcode.de/">Stadt Land Code</a>.
             Julia regularly speaks at international conferences such as TED, the Personal Democracy Forum, and the World Design Conference,
             and advises governments and nonprofits on digital strategy and transformation.
         </p>
